WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193513
[JSC] ToThis omission in DFGByteCodeParser is wrong
https://bugs.webkit.org/show_bug.cgi?id=193513
Summary
[JSC] ToThis omission in DFGByteCodeParser is wrong
Yusuke Suzuki
Reported
2019-01-16 15:38:25 PST
It assumes that `ToThis(ToThis(value)) === ToThis(value)`. But it is wrong since the semantics of ToThis in strict mode and ToThis in sloppy mode is different. If `ToThisFromSloppyMode(ToThisFromStrictMode(value))` is converted to `ToThisFromStrictMode(value)`, we have a bad time!
Attachments
Patch
(7.34 KB, patch)
2019-01-16 19:58 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Performance Numbers
(7.48 KB, text/plain)
2019-01-16 21:07 PST
,
Yusuke Suzuki
no flags
Details
Patch
(7.45 KB, patch)
2019-01-16 21:11 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-01-16 16:13:09 PST
This is not necessary. Original intent is already implemented in AI.
Yusuke Suzuki
Comment 2
2019-01-16 16:55:53 PST
Upload a patch after I ensured that the result is perf-neutral.
Yusuke Suzuki
Comment 3
2019-01-16 19:58:49 PST
Created
attachment 359344
[details]
Patch WIP
Yusuke Suzuki
Comment 4
2019-01-16 20:07:38 PST
<
rdar://problem/45842236
>
Yusuke Suzuki
Comment 5
2019-01-16 21:07:44 PST
Created
attachment 359348
[details]
Performance Numbers Performance looks neutral.
Yusuke Suzuki
Comment 6
2019-01-16 21:11:51 PST
Created
attachment 359349
[details]
Patch
WebKit Commit Bot
Comment 7
2019-01-17 00:10:59 PST
Comment on
attachment 359349
[details]
Patch Clearing flags on attachment: 359349 Committed
r240106
: <
https://trac.webkit.org/changeset/240106
>
WebKit Commit Bot
Comment 8
2019-01-17 00:11:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug